--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=TinyL298
 version=1.0
 author=GitMoDu <batatas@gmail.com>
 maintainer=GitMoDu <batatas@gmail.com>
-sentence=L298 H-Bridge driver.
-paragraph=L298 H-Bridge driver using an ATtiny85.
+sentence=L298 H-Bridge motor driver.
+paragraph=L298 H-Bridge motor driver using an ATtiny85.
 category=Communication
 url=https://github.com/GitMoDu/TinyL298
 architectures=avr
